--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,10 @@ environment:
 dependencies:
   cloud_firestore: ^4.9.1
   cupertino_icons: ^1.0.2
+  file_picker: ^5.5.0
   firebase_auth: ^4.9.0
   firebase_core: ^2.15.1
+  firebase_storage: ^11.2.6
   firebase_ui_auth: ^1.8.0
   flutter:
     sdk: flutter
