--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.9.1
   cupertino_icons: ^1.0.2
+  emoji_picker_flutter: ^1.6.1
   file_picker: ^5.5.0
   firebase_auth: ^4.9.0
   firebase_core: ^2.15.1
