--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
   cloud_firestore: ^4.9.1
   cupertino_icons: ^1.0.2
   emoji_picker_flutter: ^1.6.1
@@ -18,8 +19,11 @@ dependencies:
     sdk: flutter
   flutter_chat_ui: ^1.6.9
   get: 4.6.6
+  get_thumbnail_video: ^0.6.1
   google_fonts: ^5.1.0
   intl: ^0.18.1
+  path: ^1.8.3
+  appinio_video_player: ^1.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
