--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/Users/mac/flutter apps/Flutter apps/flutter_chat_app/linux"
+    "cmake.sourceDirectory": "/Users/mac/flutter apps/Flutter apps/flutter_chat_app/linux",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
