--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,14 +14,14 @@ dependencies:
   firebase_auth: ^4.9.0
   firebase_core: ^2.15.1
   firebase_storage: ^11.2.6
-  firebase_ui_auth: ^1.8.0
+  firebase_ui_auth: 
   flutter:
     sdk: flutter
   flutter_chat_ui: ^1.6.9
-  get: 4.6.6
+  get: 
   get_thumbnail_video: ^0.6.1
   google_fonts: ^5.1.0
-  intl: ^0.18.1
+  intl: 
   path: ^1.8.3
   appinio_video_player: ^1.2.2
 
